--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Mini site entièrement en HTML">
     <meta name="author" content="Marie Achour & Malia Benkhaled">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/jpg" href="images/favicon.jpg">
 </head>
 <body>
@@ -21,6 +21,7 @@
     </header>
     <main>
         <article>
+			<h2>À propos de la RAM :</h2>
             <p>Intéressons‑nous à ce qu’est la RAM et à quel point celle‑ci est indispensable pour un ordinateur. Nous verrons ensuite les différents modèles recommandés en fonction de plusieurs critères tels que le prix, l’usage, la durée de vie ou encore d’autres paramètres. Enfin, un petit point d’actualitésera proposé afin de mieux comprendre les raisons de la hausse des prix.</p>
             <figure>
                 <img src="images/ram.jpg" alt="Image pour intro sur la RAM">
